--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.6.0",
     "@types/pino": "^6.3.11",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "install": "^0.13.0",
     "nodemon": "^2.0.12",
     "prettier": "2.3.2",
+    "swagger-ui-express": "^4.1.6",
     "ts-node": "^10.2.0",
     "tslint": "^6.1.3",
     "typescript": "^4.3.5"
