--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ DATABASE_HOST=localhost
 DATABASE_PORT=27017
 DATABASE_USERNAME=nguyen
 DATABASE_PASSWORD=123
+
+# Token
+JWT_KEY = "iloveyou"
+JWT_EXPIRED = "2h"
