--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.15.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.4",
+    "@types/lodash": "^4.14.172",
     "@types/node": "^16.6.0",
     "@types/pino": "^6.3.11",
     "nodemon": "^2.0.12",
     "prettier": "2.3.2",
-    "swagger-ui-express": "^4.1.6",
     "ts-node": "^10.2.0",
     "tslint": "^6.1.3",
     "typescript": "^4.3.5"
@@ -25,6 +26,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.13.7",
     "pino": "^6.13.0",
     "pino-pretty": "^5.1.3"
