--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "date-fns": "^2.23.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
