--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/preset-typescript": "^7.15.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/lodash": "^4.14.172",
@@ -24,6 +25,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.23.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
