--- a/package.json
+++ b/package.json
@@ -11,29 +11,31 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/preset-typescript": "^7.15.0",
+    "@babel/preset-typescript": "^7.16.5",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.4",
-    "@types/lodash": "^4.14.172",
-    "@types/node": "^16.6.0",
-    "@types/pino": "^6.3.11",
-    "nodemon": "^2.0.12",
-    "prettier": "2.3.2",
-    "ts-node": "^10.2.0",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "^17.0.4",
+    "@types/pino": "^7.0.4",
+    "nodemon": "^2.0.15",
+    "prettier": "2.5.1",
+    "ts-node": "^10.4.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.3.5"
+    "typescript": "^4.5.4"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "date-fns": "^2.23.0",
+    "date-fns": "^2.27.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
+    "express-mongo-sanitize": "^2.1.0",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.13.7",
-    "pino": "^6.13.0",
-    "pino-pretty": "^5.1.3"
+    "mongoose": "^6.1.3",
+    "pino": "^7.6.1",
+    "pino-pretty": "^7.3.0",
+    "xss-clean": "^0.1.1"
   }
 }
